--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div><a href="./7.27/封面海报.html">海报</a></div>
+    <div><a href="./7.27/封面海报.html" target="blank">海报</a></div>
 </body>
 </html>
