--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
         .box3 {
             width: 200px;
             height: 200px;
-            background-color: royalblue;
+            background-color: gold;  
         }
         .box4 {
             width: 200px;
             height: 200px;
-            background-color: seagreen;
+            background-color: royalblue;
         }
         .box5 {
             width: 200px;
@@ -61,7 +61,7 @@
         .box7 {
             width: 200px;
             height: 200px;
-            background-color: mediumseagreen;
+            background-color: plum;
         }
         .box8 {
             width: 200px;
@@ -71,7 +71,7 @@
         .box9 {
             width: 200px;
             height: 200px;
-            background-color: plum;
+            background-color: mediumseagreen;
         }
     </style>
 </head>
