--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <a href="./jq轮播图/jq轮播图.html" target="blank">轮播图</a>
         </div>
         <div class="box4">
-            <a href="./静态趣学网/index.html" target="blank">趣学网</a>
+            <a href="./更换手机壁纸/更换壁纸.html" target="blank">更换壁纸</a>
         </div>
         <div class="box5">
             <a href="./翻转登录注册页面/denglu.html" target="blank">登录翻转</a>
