--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         body {
             margin: 0;
             padding: 0;
-            background-color: lightblue;
+            background-image: url("bg.jpg") ;
+            background-size: 100%;
         }
         .box {
             width: 600px;
@@ -26,53 +27,62 @@
             color: #fff;
             font-size: 40px;
             text-decoration: none;
-            
         }
         .box1 {
             width: 200px;
             height: 200px;
             background-color: mediumvioletred;
+            opacity: 0.7;
         }
         .box2 {
             width: 200px;
             height: 200px;
             background-color: orangered;
+            opacity: 0.7;
         }
         .box3 {
             width: 200px;
             height: 200px;
-            background-color: gold;  
+            background-color: gold; 
+            opacity: 0.7; 
         }
         .box4 {
             width: 200px;
             height: 200px;
             background-color: royalblue;
+            opacity: 0.7;
         }
         .box5 {
             width: 200px;
             height: 200px;
             background-color: yellowgreen;
+            opacity: 0.7;
         }
         .box6 {
             width: 200px;
             height: 200px;
             background-color: sandybrown;
+            opacity: 0.7;
         }
         .box7 {
             width: 200px;
             height: 200px;
             background-color: plum;
+            opacity: 0.7;
         }
         .box8 {
             width: 200px;
             height: 200px;
             background-color: navajowhite;
+            opacity: 0.7;
         }
         .box9 {
             width: 200px;
             height: 200px;
             background-color: mediumseagreen;
+            opacity: 0.7;
         }
+        
     </style>
 </head>
 <body>
