--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             width: 600px;
             height: 600px;
             line-height: 200px;
-            background-color: lightgreen;
+            /* background-color: lightgreen; */
             margin: 0 auto;
             display: flex;
             flex-wrap: wrap;
@@ -33,54 +33,63 @@
             height: 200px;
             background-color: mediumvioletred;
             opacity: 0.7;
+            border-radius: 5%;
         }
         .box2 {
             width: 200px;
             height: 200px;
             background-color: orangered;
             opacity: 0.7;
+            border-radius: 5%;
         }
         .box3 {
             width: 200px;
             height: 200px;
             background-color: gold; 
-            opacity: 0.7; 
+            opacity: 0.7;
+            border-radius: 5%; 
         }
         .box4 {
             width: 200px;
             height: 200px;
             background-color: royalblue;
             opacity: 0.7;
+            border-radius: 5%;
         }
         .box5 {
             width: 200px;
             height: 200px;
             background-color: yellowgreen;
             opacity: 0.7;
+            border-radius: 5%;
         }
         .box6 {
             width: 200px;
             height: 200px;
             background-color: sandybrown;
             opacity: 0.7;
+            border-radius: 5%;
         }
         .box7 {
             width: 200px;
             height: 200px;
             background-color: plum;
             opacity: 0.7;
+            border-radius: 5%;
         }
         .box8 {
             width: 200px;
             height: 200px;
             background-color: navajowhite;
             opacity: 0.7;
+            border-radius: 5%;
         }
         .box9 {
             width: 200px;
             height: 200px;
             background-color: mediumseagreen;
             opacity: 0.7;
+            border-radius: 5%;
         }
         
     </style>
